# YLLabelMaker

./: CMakeLists.txt  Dockerfile  launch_labelmaker.sh
src/: MyQView.h  MyQclass.h  labelmaker.cpp  labelmaker.h  main.cpp
